Lombokified configuration classes